# algorithm-homework

./: .gitignore  CMakeLists.txt  README.md  inversion-number.c  inversion-number.h  kthLargest.c  kthLargest.h  main.c  matrix-multi.c  matrix-multi.h  multiplication.c  multiplication.h  nth-smallest.c  nth-smallest.h  tree-local-min.c  tree-local-min.h
submit/: homework1.md
